[gd_scene load_steps=2 format=3 uid="uid://dliaynw0s7s52"]

[ext_resource type="Script" path="res://scenes/ui/slider_input.gd" id="1_1ag3e"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 40.0
offset_right = -80.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer" groups=["lang_text"]]
layout_mode = 2
size_flags_vertical = 6
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mus_vol" type="HBoxContainer" parent="Panel/VBoxContainer" node_paths=PackedStringArray("slider", "label", "marker")]
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../finished")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../sfx_vol")
focus_mode = 2
script = ExtResource("1_1ag3e")
slider = NodePath("HSlider")
label = NodePath("Label")
marker = NodePath("../mus_marker")

[node name="Label" type="Label" parent="Panel/VBoxContainer/mus_vol" groups=["lang_text"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.62
text = "MUSIC VOL"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/mus_vol"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.62
focus_mode = 0
max_value = 10.0
value = 10.0

[node name="value" type="Label" parent="Panel/VBoxContainer/mus_vol"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.38
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mus_marker" type="ColorRect" parent="Panel/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
color = Color(0.67451, 0.196078, 0.196078, 1)

[node name="sfx_vol" type="HBoxContainer" parent="Panel/VBoxContainer" node_paths=PackedStringArray("slider", "label", "marker")]
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../mus_vol")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../swap_confirm")
focus_mode = 2
script = ExtResource("1_1ag3e")
slider = NodePath("HSlider")
label = NodePath("Label")
marker = NodePath("../sfx_marker")

[node name="Label" type="Label" parent="Panel/VBoxContainer/sfx_vol" groups=["lang_text"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.62
text = "SFX Vol"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/sfx_vol"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.62
focus_mode = 0
max_value = 10.0
value = 10.0

[node name="value" type="Label" parent="Panel/VBoxContainer/sfx_vol"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.38
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfx_marker" type="ColorRect" parent="Panel/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
color = Color(0.67451, 0.196078, 0.196078, 1)

[node name="swap_confirm" type="CheckButton" parent="Panel/VBoxContainer" groups=["lang_text"]]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../sfx_vol")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../finished")
text = "Swap A-B"

[node name="finished" type="Button" parent="Panel/VBoxContainer" groups=["lang_text"]]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../swap_confirm")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../mus_vol")
text = "Done"

[connection signal="focus_entered" from="Panel/VBoxContainer/mus_vol" to="Panel/VBoxContainer/mus_vol" method="_on_focus_entered"]
[connection signal="focus_exited" from="Panel/VBoxContainer/mus_vol" to="Panel/VBoxContainer/mus_vol" method="_on_focus_exited"]
[connection signal="drag_ended" from="Panel/VBoxContainer/mus_vol/HSlider" to="Panel/VBoxContainer/mus_vol" method="_on_volslider_drag_ended" binds= ["mus"]]
[connection signal="focus_entered" from="Panel/VBoxContainer/sfx_vol" to="Panel/VBoxContainer/sfx_vol" method="_on_focus_entered"]
[connection signal="focus_exited" from="Panel/VBoxContainer/sfx_vol" to="Panel/VBoxContainer/sfx_vol" method="_on_focus_exited"]
[connection signal="drag_ended" from="Panel/VBoxContainer/sfx_vol/HSlider" to="Panel/VBoxContainer/sfx_vol" method="_on_volslider_drag_ended" binds= ["sfx"]]
